--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="titletext">
     <h1>Welcome to Taskly</h1>
     </div>
-    <h3>Manage Tasks, Focus & More</h3>
+    <h3>Manage Tasks, Focus on work & More</h3>
     <button class="auth">Login/Signup</button>
 
     <button class="auth1">Continue as Guest</button>
