--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <h1>Welcome to Taskly</h1>
     </div>
     <h3>Manage Tasks, Focus on work & More</h3>
-    <button class="auth">Login/Signup</button>
-
-    <button class="auth1">Continue as Guest</button>
+    <button class="auth">Resume Session</button>
+    <button class="auth1">New Session</button>
 </div>
 </html>
