--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Welcome to Taskly</h1>
     </div>
     <h3>Manage Tasks, Focus on work & More</h3>
-    <button class="auth">Resume Session</button>
-    <button class="auth1">New Session</button>
+    <button class="auth"  onclick="window.location.href = './pages/hub.html'">Resume Session</button>
+    <button class="auth1" onclick="window.location.href = './pages/hub.html'">New Session</button>
 </div>
 </html>
