Replaced the uni-code check with an svg check in the to-do menu. + Added microsoft fluency credits for icons.

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <h3>Manage Tasks, Focus on work & More</h3>
     <button class="auth"  onclick="window.location.href = './pages/hub.html'">Resume Session</button>
     <button class="auth1" onclick="window.location.href = './pages/hub.html'">New Session</button>
+</br>
+<h4>All icons used in this project are icons from Microsoft Fluent UI Icons powered by IconDuck</h4>
 </div>
 </html>
