--- a/pages/hub.html
+++ b/pages/hub.html
@@ -9,7 +9,9 @@
 
 <template id="tasktemplate">
     <div class="nextto2">
-        <button class="completebutton" onclick="remove(this)">✔</button>
+        <button class="completebutton" onclick="remove(this)"><svg xmlns="http://www.w3.org/2000/svg" width="50%" height="50%" viewBox="0 0 99 83" fill="none" class="svg-icon-check-todo">
+            <path d="M35.0814 61.8272L14.0379 40.7838C10.8266 37.5724 5.6199 37.5724 2.40853 40.7838C-0.802842 43.9952 -0.802842 49.2018 2.40853 52.4132L29.8193 79.8239C33.2385 83.2431 38.8556 82.9883 41.9512 79.2736L96.7727 13.4878C99.6802 9.99889 99.2088 4.81361 95.7198 1.90617C92.2309 -1.00126 87.0457 -0.529874 84.1382 2.95905L35.0814 61.8272Z" fill="white"/>
+          </svg></button>
         <input type="text" class="taskinput" placeholder="Task Name">
     </div>
     
