Fixed dark mode, and added credits page.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <button class="auth"  onclick="window.location.href = './pages/hub.html'">Resume Session</button>
     <button class="auth1" onclick="window.location.href = './pages/hub.html'">New Session</button>
 </br>
-<h4>All icons used in this project are icons from Microsoft Fluent UI Icons powered by IconDuck</h4>
+<button class="auth1" onclick="window.location.href = './pages/credits.html'">View Credits</button>
+
 </div>
 </html>
