--- a/pages/credits.html
+++ b/pages/credits.html
@@ -12,6 +12,9 @@
     <h3>This project would not be possible without</h3>
     <button class="auth"  onclick="window.location.href = 'https://wallpapershome.com/best-photos/?author=1432&page=16'">Wallpapers Home - Backgroud Photos</button>
     <button class="auth1" onclick="window.location.href = 'https://www.figma.com/community/plugin/1149932624908995432/microsoft-fluent-ui-icons-by-iconduck'">Fluency Icons by Icon Duck | Figma Plugin - Icons</button>
+    <button class="auth1" onclick="window.location.href = 'https://pixabay.com/sound-effects/search/finish/'">Pixabay - Sound Effects</button>
+
+    
 </br>
 <button class="auth1" onclick="window.location.href = '../index.html'">Home</button>
 
