--- a/pages/settings.html
+++ b/pages/settings.html
@@ -15,6 +15,11 @@
 
 <textarea class="notesinput" id="breakDuration" placeholder="breakDuration"></textarea>
 <textarea class="notesinput" id="goals" placeholder="Goals"></textarea>
+<textarea class="notesinput" id="xp_per_task" placeholder="XP Per Task"></textarea>
+<textarea class="notesinput" id="xp_required" placeholder="XP Required"></textarea>
+<textarea class="notesinput" id="break_xpSTART" placeholder="Start Break when XP Goal is met. (yes/no)"></textarea>
+
+
 </div>
 <button class="auth1" onclick="saveSettings(`breaks_duration`, document.getElementById(`breakDuration`).value, 'int')">Go</button>
 
@@ -44,7 +49,10 @@ const mySettingsData = {
     breaks_frequency: 10,
     breaks_duration: 0.5, // in minutes
     music_category: "pop",
-    options_goals: 5
+    options_goals: 5,
+    xp_required: 100,
+    xp_per_task: 10,
+    xp_breakSTART: "no"
 
 }
 
@@ -68,6 +76,11 @@ window.onload = function() {
     const settingsData = getSettings();
     document.getElementById("breakDuration").value = settingsData.breaks_duration;
     document.getElementById("goals").value = settingsData.options_goals;
+    document.getElementById("xp_per_task").value = settingsData.xp_per_task;
+    document.getElementById("xp_required").value = settingsData.xp_required;
+    document.getElementById("break_xpSTART").value = settingsData.break_xpSTART;
+
+
 }
 
 function resetSettings() {
@@ -85,7 +98,14 @@ function updateSettings(setting, value, type) {
             value = parseFloat(value);
         }
 
+    } else if (type == 'y/n'){
+        if (value == 'yes' || value == 'no') {
+            value = value.toLowerCase();
+    } else {
+        console.log(`Error Log - updateSettings(): ${value} is not a yes/no in LOWERCASE. Setting: ${setting} was not updated.`);
+        return 0;
     }
+}
 console.log(setting, value, type);
     const settingsDataUS = getSettings();
     settingsDataUS[setting] = value;
@@ -95,7 +115,11 @@ console.log(setting, value, type);
 function saveSettings() {
     updateSettings("breaks_duration", document.getElementById('breakDuration').value, "int");
     updateSettings("options_goals", document.getElementById('goals').value, "int");
+    updateSettings("xp_per_task", document.getElementById('xp_per_task').value, "int");
+    updateSettings("xp_required", document.getElementById('xp_required').value, "int");
+    updateSettings("break_xpSTART", document.getElementById('break_xpSTART').value, "y/n");
 }
+
 </script>
 
     </body>
