Final Commit? | Added some credits, and fixed home page.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <h1>Welcome to Taskly</h1>
     </div>
     <h3>Manage Tasks, Focus on work & More</h3>
-    <button class="auth"  onclick="window.location.href = './pages/hub.html'">Resume Session</button>
-    <button class="auth1" onclick="window.location.href = './pages/hub.html'">New Session</button>
+    <button class="auth1" onclick="window.location.href = './pages/hub.html'">Open Taskly</button>
 </br>
 <button class="auth1" onclick="window.location.href = './pages/credits.html'">View Credits</button>
 
