--- a/pages/credits.html
+++ b/pages/credits.html
@@ -13,8 +13,13 @@
     <button class="auth"  onclick="window.location.href = 'https://wallpapershome.com/best-photos/?author=1432&page=16'">Wallpapers Home - Backgroud Photos</button>
     <button class="auth1" onclick="window.location.href = 'https://www.figma.com/community/plugin/1149932624908995432/microsoft-fluent-ui-icons-by-iconduck'">Fluency Icons by Icon Duck | Figma Plugin - Icons</button>
     <button class="auth1" onclick="window.location.href = 'https://pixabay.com/sound-effects/search/finish/'">Pixabay - Sound Effects</button>
+    <button class="auth1" onclick="window.location.href = 'https://stock.adobe.com/images/tree-growth-diagram-with-green-leaf-nature-plant-set-of-illustrations-with-phases-plant-growth-flat-style/182136180'">Adobe Stock - Tree Stages</button>
+    <button class="auth1" onclick="window.location.href = 'https://stock.adobe.com/images/horizontal-seamless-background-with-forest/138815333'">Adobe Stock - Forest Background</button>
+    <button class="auth1" onclick="window.location.href = 'https://www.w3schools.com'">w3Schools - HTML, CSS, and JS Documentation</button>
+    <button class="auth1" onclick="window.location.href = 'https://developer.mozilla.org'">Mozilla - HTML Documentation</button>
 
-    
+
+
 </br>
 <button class="auth1" onclick="window.location.href = '../index.html'">Home</button>
 
